Added Windows 8 Metro equivalent template.
Additionally fixed GeneratedCodeAttribute to have a name and version
number.

--- a/T4/ResourceGenerator/ResourceGenerator.tt
+++ b/T4/ResourceGenerator/ResourceGenerator.tt
@@ -3,13 +3,13 @@
 #><#@ output extension=".log"
 #><# var manager = Manager.Create(Host, GenerationEnvironment);
 
-foreach(var resource in Resources.Named(new [] { "Sample" }, Path.GetDirectoryName(Host.TemplateFile))) {
+foreach(var resource in Resources.Named(new [] { "Sample" }, Path.GetDirectoryName(Host.TemplateFile), ".resx")) {
     manager.StartNewFile(resource.Name + ".generated.cs");
 #>namespace <#=manager.DefaultProjectNamespace#>
 {
 	using System;
     
-    [global::System.CodeDom.Compiler.GeneratedCodeAttribute()]
+    [global::System.CodeDom.Compiler.GeneratedCodeAttribute("T4 based resource generator", "0.1")]
     [global::System.Diagnostics.DebuggerNonUserCodeAttribute()]
     internal class <#=resource.Name#>
     {
